--- a/src/views/css/recipe.css
+++ b/src/views/css/recipe.css
@@ -1,3 +1,18 @@
 .recipe-div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   font-style: italic;
+  height: 70vh;
+}
+
+.recipe-image{
+  height: 35%;
+}
+
+.recipe-left{
+  padding: 20px;
+}
+
+.recipe-right{
+  padding: 10px;
 }
