--- a/src/app.css
+++ b/src/app.css
@@ -96,3 +96,7 @@ main {
 .text-color-dark {
   color: var(--clr-primary-dark) !important;
 }
+
+.react-stars > span {
+  text-shadow: 1px 1px 2px black;
+}
