--- a/src/views/css/nav.css
+++ b/src/views/css/nav.css
@@ -4,7 +4,7 @@ nav {
   font-family: var(--font-roboto);
 }
 
-a.link {
+/* a.link {
   color: cornflowerblue;
   text-decoration: none;
   font-weight: bold;
@@ -18,7 +18,7 @@ a.link {
 a.active {
   color: red;
   font-weight: bold;
-}
+} */
 
 .nav-search-div {
   padding-top: 1rem;
@@ -31,4 +31,54 @@ a.active {
   background: white
     url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath fill='black' d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
     no-repeat 10px center;
+}
+
+.navbar,
+.dropdown-menu {
+  background: linear-gradient(
+    to left top,
+    var(--clr-primary-light-middle),
+    var(--clr-primary-light)
+  ) !important;
+  box-shadow: 1px 1px 3px gray;
+}
+
+.navbar,
+.dropdown-menu > li {
+  font-size: smaller;
+}
+
+.dropdown-menu > li:hover {
+  background-color: var(--clr-primary-light-middle) !important;
+}
+
+.searchBar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#searchQueryInput {
+  width: 100%;
+  height: 2.8rem;
+  background: #f5f5f5;
+  outline: none;
+  border: none;
+  border-radius: 1.625rem;
+  padding: 0 3.5rem 0 1.5rem;
+  font-size: 1rem;
+}
+
+#searchQuerySubmit {
+  width: 3.5rem;
+  height: 2.8rem;
+  margin-left: -3.5rem;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+#searchQuerySubmit:hover {
+  cursor: pointer;
 }
