--- a/src/views/css/recipe.css
+++ b/src/views/css/recipe.css
@@ -8,7 +8,7 @@
 
 .recipe-div {
   position: relative;
-  margin: 0 10rem;
+  /* margin: 0 10rem; */
   margin-top: -5rem;
   background: white;
 }
@@ -41,6 +41,18 @@
   .recipe-method-col {
     padding-right: 0.5rem !important;
   }
+}
+
+.recipe-ingridient {
+  border-bottom: 1px dashed lightgray;
+  display: grid;
+  grid-template-columns: 0.3fr 1fr;
+  column-gap: 1rem;
+}
+
+.recipe-ingridient-unit {
+  min-width: fit-content;
+  block-size: fit-content;
 }
 
 /* .recipe-div {
