--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -55,7 +55,7 @@
   position: relative;
   display: block;
   color: white;
-  background: green;
+  background: var(--clr-primary-dark);
   opacity: 0.9;
   padding: 0.1rem 0.6rem 0.2rem 0.2rem;
   z-index: 1;
