--- a/src/views/css/footer.css
+++ b/src/views/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   font-size: smaller;
   background-color: var(--clr-primary-dark);
   padding: 0 15vw;
