--- a/public/static/css/color-schemes/blue-1.css
+++ b/public/static/css/color-schemes/blue-1.css
@@ -1,5 +1,6 @@
 :root {
   /* "blue-ish" color-scheme */
+  --clr-primary-light-light: rgb(15, 50, 217, 0.05);
   --clr-primary-light: rgb(15, 50, 217, 0.1);
   --clr-primary-light-middle: rgb(70, 50, 137, 0.2);
   --clr-primary-middle: rgb(32, 8, 79, 0.7);
